--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -37,7 +37,7 @@
         <div class="flex flex-col lg:flex-row gap-6">
             <!-- Left Column: Chart -->
             <main class="lg:w-8/12 flex flex-col">
-                <div class="card p-2 sm:p-4 flex flex-col flex-1 min-h-0 overflow-hidden">
+                <div class="card p-2 sm:p-4 flex flex-col flex-1 min-h-0 overflow-hidden chart-card-mobile-padding">
                     <div id="tradingview_chart" class="flex-1 w-full"></div>
                 </div>
             </main>
