--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -37,7 +37,7 @@
         <div class="flex flex-col lg:flex-row gap-6 items-stretch">
             <!-- Left Column: Chart -->
             <main class="lg:w-8/12 flex flex-col chart-container">
-                <div class="card flex flex-col flex-1 min-h-0 overflow-hidden chart-card-mobile-padding">
+                <div class="card flex flex-col flex-1 min-h-0 overflow-hidden chart-card-padding">
                     <div id="tradingview_chart" class="flex-1 w-full h-full"></div>
                 </div>
             </main>
