--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -37,7 +37,7 @@
         <div class="flex flex-col gap-6">
             <!-- Chart -->
             <main class="w-full flex flex-col chart-container">
-                <div class="card flex flex-col flex-1 min-h-0 overflow-hidden chart-card-padding">
+                <div class="card flex flex-col flex-1 min-h-0 overflow-hidden">
                     <div id="tradingview_chart" class="flex-1 w-full h-full"></div>
                 </div>
             </main>
